--- a/src/app/dashboard/inventory/inventory.component.css
+++ b/src/app/dashboard/inventory/inventory.component.css
@@ -1,5 +1,35 @@
+.table-container {
+    overflow-x: scroll;
+    box-shadow: 0px 0px 20px 5px rgba(200, 200, 200, 0.69);
+}
+
 .table {
-    border: 1px solid #dee2e6;
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+    overflow: hidden;
+}
+
+.table td,
+.table th {
+    padding: 10px 20px;
+}
+
+.table tr:nth-child(even) {
+    background-color: #38baa21f;
+}
+
+.table tr:hover {
+    background-color: #e8e8e8;
+}
+
+.table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #38baa2;
+    font-size: 16px;
+    color: white;
 }
 
 .abc {
@@ -47,12 +77,6 @@
     background-color: #3e8e41;
 }
 
-th {
-    background-color: white;
-    color: black;
-    /* border: 2px solid #dee2e6; */
-}
-
 .inventory {
     margin-left: 47px;
     margin-top: 120px;
@@ -83,7 +107,7 @@ th {
     }
 }
 
-@media only screen and (min-width: 1200px)and (max-width: 1400px) {
+@media only screen and (min-width: 1200px) and (max-width: 1400px) {
     .inventory {
         margin-left: 80px;
     }
