--- a/src/app/dashboard/users/users.component.css
+++ b/src/app/dashboard/users/users.component.css
@@ -20,23 +20,38 @@
     max-width: 15%;
 }
 
-
-/* .ng-select .ng-select-container {
-    cursor: default;
-    display: flex;
-    outline: none;
-    overflow: hidden;
-    position: relative;
-    width: 120%;
-} */
-
-.table {
-    border: 1px solid #8080804f;
+.table-container {
+    overflow-x: scroll;
+    box-shadow: 0px 0px 20px 5px rgba(200, 200, 200, 0.69);
 }
 
-th {
-    background-color: white;
-    color: black;
+.table {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+    overflow: hidden;
+}
+
+.table td,
+.table th {
+    padding: 10px 20px;
+}
+
+.table tr:nth-child(even) {
+    background-color: #38baa21f;
+}
+
+.table tr:hover {
+    background-color: #e8e8e8;
+}
+
+.table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #38baa2;
+    font-size: 16px;
+    color: white;
 }
 
 .user-class {
@@ -78,7 +93,7 @@ th {
     }
 }
 
-@media only screen and (min-width: 1200px)and (max-width: 1400px) {
+@media only screen and (min-width: 1200px) and (max-width: 1400px) {
     .user-class {
         margin-left: 80px;
     }
