--- a/src/app/dashboard/inventory/add-inventories/add-inventories.component.css
+++ b/src/app/dashboard/inventory/add-inventories/add-inventories.component.css
@@ -214,7 +214,7 @@ img {
     width: 103px;
     margin-top: -37px;
     margin-left: 10px;
-    opacity: .01;
+    opacity: 0.01;
 }
 
 .upload-btn-wrapper[_ngcontent-serverApp-c16] {
@@ -273,7 +273,7 @@ h2 {
 }
 
 html {
-    font-family: 'Lora', sans-serif;
+    font-family: "Lora", sans-serif;
     width: 100%;
 }
 
@@ -292,7 +292,7 @@ input,
 span,
 label,
 textarea {
-    font-family: 'Ubuntu', sans-serif;
+    font-family: "Ubuntu", sans-serif;
     display: block;
     /* margin: 10px; */
     /* padding: 12px; */
@@ -404,7 +404,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background: #EEE;
+    background: #eee;
 }
 
 input[type="submit"]:active {
@@ -440,7 +440,7 @@ textarea.question:invalid~input[type="submit"] {
 
 .form-control {
     margin-top: 10px;
-    border: 1PX solid #cccccc;
+    border: 1px solid #cccccc;
     /* border-bottom: 1px solid; */
     border-radius: px;
     width: 91%;
@@ -556,7 +556,7 @@ textarea.question:invalid~input[type="submit"] {
     }
 }
 
-@media only screen and (min-width: 1200px)and (max-width: 1400px) {
+@media only screen and (min-width: 1200px) and (max-width: 1400px) {
     .inventoryForm {
         margin-left: 80px;
     }
