--- a/src/app/dashboard/inventory/inventory.component.html
+++ b/src/app/dashboard/inventory/inventory.component.html
@@ -15,24 +15,24 @@
             <br />
             <h1><b>Inventory Management</b></h1>
             <br />
-            <div>
+            <div class="col-2">
                 <button class="btn btn-primary" (click)="setFormTitle('Inventory')">
           Add New
         </button>
             </div>
 
-            <div class="pull-right">
-                <div class="card-body row">
-                    <!--end of col-->
-                    <div class="col">
-                        <ng-select [items]="options" bindLabel="name" bindValue="value" class="mr-2 ml-2" placeholder="Filter By" [(ngModel)]="selectedOption" (change)="optionChange($event)" [clearable]="false">
-                        </ng-select>
-                    </div>
-                    <div class="col">
-                        <input type="text" class="form-control ml-2" placeholder="Search {{ placeholder }}" [(ngModel)]="refId" />
-                        <!-- <input class="form-control" id="myInput" type="text" [(ngModel)]="general_search" placeholder="Search topic or keyword" /> -->
-                    </div>
+            <!-- <div class=""> -->
+            <div class="card-body row">
+                <div class="col-3">
+                    <ng-select [items]="options" bindLabel="name" bindValue="value" class="mr-2 ml-2" placeholder="Filter By" [(ngModel)]="selectedOption" (change)="optionChange($event)" [clearable]="false">
+                    </ng-select>
+                </div>
+                <div class="col-3">
+                    <input type="text" class="form-control ml-2" placeholder="Search {{ placeholder }}" [(ngModel)]="refId" />
+                </div>
 
+                <div class="col-1"></div>
+                <div class="col-5">
                     <button onclick="window.print()" class="btn btn-primary">
             Print
           </button> &nbsp; &nbsp; &nbsp;<button (click)="exportTOExcel()" class="btn btn-primary">
@@ -40,121 +40,125 @@
           </button>
                 </div>
             </div>
-            <br /><br /><br />
+            <!-- </div> -->
+            <!-- <br /><br /><br /> -->
             <!-- Inventory management table is below -->
-            <table class="table table-hover">
-                <thead>
-                    <th (click)="sort('id')" scope="col">ID <i class="fa fa-sort"></i></th>
-                    <th scope="col">Purpose</th>
-                    <th scope="col">Client Details</th>
-                    <th scope="col">Location</th>
-                    <th scope="col">Type</th>
-                    <th scope="col">Land Area</th>
-                    <th scope="col">Client Type</th>
-                    <th scope="col">Demand</th>
-                    <th scope="col">Beds</th>
-                    <th scope="col">Added On</th>
-                    <!-- <th scope="col">Agent Assigned</th> -->
-                    <th scope="col">Operations</th>
-                </thead>
+            <div class="table-container mb-5 mt-4">
+                <table class="table table-hover">
+                    <thead>
+                        <th (click)="sort('id')" scope="col">ID <i class="fa fa-sort"></i></th>
+                        <th scope="col">Purpose</th>
+                        <th scope="col">Client Details</th>
+                        <th scope="col">Location</th>
+                        <th scope="col">Property Type</th>
+                        <th scope="col">Land Area</th>
 
-                <tbody>
-                    <!-- <td>
-                        <input class="form-control" type="text" [(ngModel)]="search_id" placeholder="Search ID">
-                    </td>
-                    <td>
-                        <input class="form-control" type="text" [(ngModel)]="search_location" placeholder="Search">
-                    </td>
-                    <td>
-                        <input class="form-control" type="text" [(ngModel)]="search_area" placeholder="Search">
-                    </td>
-                    <td>
-                        <input class="form-control" type="text" [(ngModel)]="search_type" placeholder="Search">
-                    </td>
-                    <td>
-                        <input class="form-control" type="text" [(ngModel)]="search_demand" placeholder="Search">
-                    </td> -->
-                    <!-- <td>
-                        <input class="form-control" type="text" placeholder="">
-                    </td>
-                    <td>
-                        <input class="form-control" type="text" placeholder="">
-                    </td>
-                    <td>
-                        <input class="form-control" type="text" placeholder="">
-                    </td>
-                    <td>
-                        <input class="form-control" type="text" placeholder="">
-                    </td>
-                    <td>
-                        <i class="fa fa-search icon"></i>
-                    </td> -->
-                    <tr *ngFor="let user of user | filterlist: selectedOption:refId | orderBy: key: reverse | paginate:{itemsPerPage:10,currentPage:p}; ">
-                        <!-- | tableFilter05: search_demand | tableFilter04: search_type | tableFilter03: search_area | tableFilter02: search_location | tableFilter: search_id | filter: general_search"> -->
-                        <td>{{ user.referenceId }}</td>
-                        <td>{{ user.property_purpose }}</td>
-                        <td>
-                            <b>Name : </b>{{ user.client_name |titlecase }} <br />
-                            <b>Phone : </b>{{ user.client_number }}
-                        </td>
-                        <td>
-                            {{ user.city[0]?.city }}<span></span><br /><span class="badge badge-light" *ngFor="let loc of user.location">{{ loc.location }},
-              </span>
-                        </td>
+                        <th scope="col">Demand</th>
+                        <th scope="col">Beds</th>
+                        <th scope="col">Added On</th>
+                        <!-- <th scope="col">Agent Assigned</th> -->
+                        <th scope="col">Operations</th>
+                    </thead>
 
-                        <td>{{ user.property_type }}</td>
-                        <td *ngIf="user.area == null else elseBlockArea"><b>Max:</b> {{ user.max_area + " - " + user.area_unit}}<br><b>Min:</b> {{ user.min_area + " - " + user.area_unit}}</td>
-                        <ng-template #elseBlockArea>
-                            <td>{{ user.area + " - " + user.area_unit}}</td>
-                        </ng-template>
-                        <td>{{ user.client_type | titlecase }}</td>
-                        <td *ngIf="user.demand_price == null else elseBlockDemand"><b>Max:</b> {{ user.max_price }}<br><b>Min:</b> {{ user.min_price }}</td>
-                        <ng-template #elseBlockDemand>
-                            <td>{{ user.demand_price }}</td>
-                        </ng-template>
+                    <tbody>
+                        <!-- <td>
+                <input class="form-control" type="text" [(ngModel)]="search_id" placeholder="Search ID">
+                </td>
+                <td>
+                <input class="form-control" type="text" [(ngModel)]="search_location" placeholder="Search">
+                </td>
+                <td>
+                <input class="form-control" type="text" [(ngModel)]="search_area" placeholder="Search">
+                </td>
+                <td>
+                <input class="form-control" type="text" [(ngModel)]="search_type" placeholder="Search">
+                </td>
+                <td>
+                <input class="form-control" type="text" [(ngModel)]="search_demand" placeholder="Search">
+                </td> -->
+                        <!-- <td>
+                <input class="form-control" type="text" placeholder="">
+                </td>
+                <td>
+                <input class="form-control" type="text" placeholder="">
+                </td>
+                <td>
+                <input class="form-control" type="text" placeholder="">
+                </td>
+                <td>
+                <input class="form-control" type="text" placeholder="">
+                </td>
+                <td>
+                <i class="fa fa-search icon"></i>
+                </td> -->
+                        <tr *ngFor="let user of user | filterlist: selectedOption:refId | orderBy: key: reverse | paginate:{itemsPerPage:30,currentPage:p}; ">
+                            <!-- | tableFilter05: search_demand | tableFilter04: search_type | tableFilter03: search_area | tableFilter02: search_location | tableFilter: search_id | filter: general_search"> -->
+                            <td>{{ user.referenceId }}</td>
+                            <td>{{ user.property_purpose }}</td>
+                            <td>
+                                <b>Name : </b>{{ user.client_name |titlecase }} <br />
+                                <b>Phone : </b>{{ user.client_number }}<br />
+                                <b>Type : </b>{{ user.client_type | titlecase }}
+                            </td>
+                            <td>
+                                {{ user.city[0]?.city }}<span></span><br /><span class="badge badge-light" *ngFor="let loc of user.location">{{ loc.location }},
+                </span>
+                            </td>
 
-                        <td>{{ user.beds_number }}</td>
-                        <td>{{ user.created | date }}</td>
-                        <!-- <td>{{ user.assigned_to | titlecase}}</td> -->
-                        <td>
-                            <i class="fa fa-edit icon" (click)="setUserToEdit(user)"></i
-              ><a (click)="setUserToEdit(user)" role="button"></a>
+                            <td>{{ user.property_type }}</td>
+                            <td *ngIf="user.area == null else elseBlockArea"><b>Max:</b> {{ user.max_area + " - " + user.area_unit}}<br><b>Min:</b> {{ user.min_area + " - " + user.area_unit}}</td>
+                            <ng-template #elseBlockArea>
+                                <td>{{ user.area + " - " + user.area_unit}}</td>
+                            </ng-template>
 
-              <i
+                            <td *ngIf="user.demand_price == null else elseBlockDemand"><b>Max:</b> {{ user.max_price }}<br><b>Min:</b> {{ user.min_price }}</td>
+                            <ng-template #elseBlockDemand>
+                                <td>{{ user.demand_price }}</td>
+                            </ng-template>
+
+                            <td>{{ user.beds_number }}</td>
+                            <td>{{ user.created | date }}</td>
+                            <!-- <td>{{ user.assigned_to | titlecase}}</td> -->
+                            <td>
+                                <i class="fa fa-edit icon" (click)="setUserToEdit(user)"></i
+                ><a (click)="setUserToEdit(user)" role="button"></a>
+                
+                <i
                 class="fa fa-trash icon"
                 (click)="confirmID(user._id)"
                 data-toggle="modal"
                 data-target="#exampleModal1"
-              ></i>
-                        </td>
-                        <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">
-                                            Delete Confirmation
-                                        </h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        Are you sure you want to delete it?
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                      Close
-                    </button>
-                                        <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="deleteInventory()">
-                      Delete
-                    </button>
+                ></i>
+                            </td>
+                            <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">
+                                                Delete Confirmation
+                                            </h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            Are you sure you want to delete it?
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                Close
+                </button>
+                                            <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="deleteInventory()">
+                Delete
+                </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </tr>
-                </tbody>
-            </table>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
             <pagination-controls (pageChange)="p = $event"></pagination-controls>
         </div>
     </div>
