--- a/src/app/dashboard/leads/leads.component.html
+++ b/src/app/dashboard/leads/leads.component.html
@@ -12,152 +12,161 @@
     <div class="col-md-9">
         <div class="leads">
             <h1><b>Leads Management</b></h1>
-            <br />
-            <div>
-                <button class="btn btn-primary" (click)="setFormTitle('Lead')">
-          Add New
-        </button>
+            <!-- <br /> -->
+            <div class="col-1">
+                <div>
+                    <button class="btn btn-primary" (click)="setFormTitle('Lead')">
+              Add New
+            </button>
+                </div>
             </div>
-            <div class="pull-right">
+            <div class="">
                 <div class="card-body row">
-                    <div class="col">
+
+                    <div class="col-3">
                         <ng-select [items]="options" bindLabel="name" bindValue="value" class="mr-2 ml-2" placeholder="Filter By" [(ngModel)]="selectedOption" (change)="optionChange($event)" [clearable]="false">
                         </ng-select>
                     </div>
-                    <div class="col">
+                    <div class="col-3">
                         <input class="form-control" id="myInput" type="text" placeholder="Search {{ placeholder }}" [(ngModel)]="refId" />
                     </div>
 
-                    <button onclick="window.print()" class="btn btn-primary">
+                    <div class="col-1"></div>
+                    <div class="col-5">
+                        <button onclick="window.print()" class="btn btn-primary">
             Print
           </button> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<button (click)="exportTOExcel()" class="btn btn-primary">
             Excel
           </button>
+                    </div>
                 </div>
             </div>
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th (click)="sort('id')" scope="col">
-                            ID <i class="fa fa-sort"></i>
-                        </th>
-                        <th scope="col">Purpose</th>
-                        <th scope="col">Client</th>
-                        <th scope="col">Client Type</th>
-                        <th scope="col">Property Type</th>
-                        <th scope="col">Area</th>
-                        <th scope="col">Location</th>
-                        <th scope="col">Demand</th>
-                        <th scope="col">Added On</th>
-                        <th scope="col">Assigned To</th>
-                        <th scope="col">Media</th>
-                        <th scope="col">Operations</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="
-              let user of user
+            <div class="table-container mb-5 mt-4">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th (click)="sort('id')" scope="col">
+                                ID <i class="fa fa-sort"></i>
+                            </th>
+                            <th scope="col">Purpose</th>
+                            <th scope="col">Client Details</th>
+
+                            <th scope="col">Property Type</th>
+                            <th scope="col">Area</th>
+                            <th scope="col">Location</th>
+                            <th scope="col">Demand</th>
+                            <th scope="col">Added On</th>
+                            <th scope="col">Assigned To</th>
+                            <th scope="col">Media</th>
+                            <th scope="col">Operations</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="
+                let user of user
                 | filterlist: selectedOption:refId
                 | orderBy: key:reverse
                 | paginate: { itemsPerPage: 10, currentPage: p }
-            ">
-                        <td>{{ user.referenceId }}</td>
-                        <td>{{ user.property_purpose }}</td>
-                        <td>
-                            <b>Name : </b>{{ user.client_name | titlecase }} <br />
-                            <b>Number : </b>{{ user.client_number }}
-                        </td>
-                        <td>{{ user.client_type }}</td>
-
-                        <td>{{ user.property_type }}</td>
-                        <td *ngIf="user?.area != null; else elseBlockArea">
-                            <span>{{ user?.area + " - " + user?.area_unit }}</span>
-                        </td>
-                        <ng-template #elseBlockArea>
+                ">
+                            <td>{{ user.referenceId }}</td>
+                            <td>{{ user.property_purpose }}</td>
                             <td>
-                                <span *ngIf="
-                    user?.max_area == null || user?.min_area == null;
-                    else elseBlockArea2
-                  ">
-                  <span>None</span>
-                                </span>
-                                <ng-template #elseBlockArea2>
-                                    <span><b>Max:</b> {{ user?.max_area + " - " + user?.area_unit
-                    }}<br /><b>Min:</b>
-                    {{ user?.min_area + " - " + user?.area_unit }}</span
-                  >
-                </ng-template>
-              </td>
-            </ng-template>
+                                <b>Name : </b>{{ user.client_name | titlecase }} <br />
+                                <b>Number : </b>{{ user.client_number }} <br/>
+                                <b>Type : </b> {{ user.client_type }}
+                            </td>
 
+
+                            <td>{{ user.property_type }}</td>
+                            <td *ngIf="user?.area != null; else elseBlockArea">
+                                <span>{{ user?.area + " - " + user?.area_unit }}</span>
+                            </td>
+                            <ng-template #elseBlockArea>
                                 <td>
-                                    {{ user.city[0]?.city }}<span>&nbsp;&nbsp;</span><br /><span class="badge badge-light" *ngFor="let loc of user.location">{{ loc.location }},
-              </span>
-                            </td>
-                            <td *ngIf="user.demand_price == null; else elseBlockDemand">
-                                <b>Max:</b> {{ user.max_price }}<br /><b>Min:</b> {{ user.min_price }}
-                            </td>
-                            <ng-template #elseBlockDemand>
-                                <td>{{ user.demand_price }}</td>
-                            </ng-template>
+                                    <span *ngIf="
+                user?.max_area == null || user?.min_area == null;
+                else elseBlockArea2
+                ">
+                <span>None</span>
+                                    </span>
+                                    <ng-template #elseBlockArea2>
+                                        <span><b>Max:</b> {{ user?.max_area + " - " + user?.area_unit
+                }}<br /><b>Min:</b>
+                {{ user?.min_area + " - " + user?.area_unit }}</span
+                >
+                </ng-template>
+                </td>
+                </ng-template>
+                
+                <td>
+                {{ user.city[0]?.city }}<span>&nbsp;&nbsp;</span><br /><span class="badge badge-light" *ngFor="let loc of user.location">{{ loc.location }},
+                </span>
+                                </td>
+                                <td *ngIf="user.demand_price == null; else elseBlockDemand">
+                                    <b>Max:</b> {{ user.max_price }}<br /><b>Min:</b> {{ user.min_price }}
+                                </td>
+                                <ng-template #elseBlockDemand>
+                                    <td>{{ user.demand_price }}</td>
+                                </ng-template>
 
-                            <td>{{ user.created | date: "dd/MM/yyyy" }}</td>
-                            <td>
-                                <span><b>Assigned To: </b> {{ user?.assigned_to }}</span
-              ><br />
-            </td>
-            <td>
-              <span><b>Media: </b> {{ user?.media }}</span
-              ><br />
-            </td>
-            <td>
-              <i class="fa fa-edit icon" (click)="setUserToEdit(user)"></i>
-              <a (click)="setUserToEdit(user)" role="button"></a>
-
-              <i
+                                <td>{{ user.created | date: "dd/MM/yyyy" }}</td>
+                                <td>
+                                    <span><b>Assigned To: </b> {{ user?.assigned_to | titlecase}}</span
+                ><br />
+                </td>
+                <td>
+                <span><b>Media: </b> {{ user?.media }}</span
+                ><br />
+                </td>
+                <td style="width: 12%;">
+                <i class="fa fa-edit icon" (click)="setUserToEdit(user)"></i>
+                <a (click)="setUserToEdit(user)" role="button"></a>
+                
+                <i
                 class="fa fa-trash icon"
                 (click)="confirmID(user._id)"
                 data-toggle="modal"
                 data-target="#exampleModal1"
-              ></i>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <span
+                ></i>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <span
                 ><i
-                  class="fas fa-exchange-alt"
-                  data-toggle="modal"
-                  data-target="#myModal"
-                  (click)="setCurrentUser(user)"
+                class="fas fa-exchange-alt"
+                data-toggle="modal"
+                data-target="#myModal"
+                (click)="setCurrentUser(user)"
                 ></i
-              ></span>
-                            </td>
-                            <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">
-                                                Delete Confirmation
-                                            </h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                                        </div>
-                                        <div class="modal-body">
-                                            Are you sure you want to delete it?
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                      Close
-                    </button>
-                                            <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="deleteLead()">
-                      Delete
-                    </button>
+                ></span>
+                                </td>
+                                <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">
+                                                    Delete Confirmation
+                                                </h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                Are you sure you want to delete it?
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                Close
+                </button>
+                                                <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="deleteLead()">
+                Delete
+                </button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                    </tr>
-                </tbody>
-            </table>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
             <pagination-controls (pageChange)="p = $event"></pagination-controls>
         </div>
     </div>
