--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     overflow: hidden;
 }
 
@@ -94,7 +94,7 @@ form {
 }
 
 .i i {
-    transition: .3s;
+    transition: 0.3s;
 }
 
 .input-div>div {
@@ -109,18 +109,18 @@ form {
     transform: translateY(-50%);
     color: #999;
     font-size: 18px;
-    transition: .3s;
+    transition: 0.3s;
 }
 
 .input-div:before,
 .input-div:after {
-    content: '';
+    content: "";
     position: absolute;
     bottom: -2px;
     width: 0%;
     height: 2px;
     background-color: #38d39f;
-    transition: .4s;
+    transition: 0.4s;
 }
 
 .input-div:before {
@@ -157,7 +157,7 @@ form {
     padding: 0.5rem 0.7rem;
     font-size: 1rem;
     color: #555;
-    font-family: 'poppins', sans-serif;
+    font-family: "poppins", sans-serif;
     font-weight: 400;
 }
 
@@ -170,7 +170,7 @@ a {
     text-align: right;
     text-decoration: none;
     color: #0b6592;
-    transition: .3s;
+    transition: 0.3s;
 }
 
 p {
@@ -192,11 +192,11 @@ a:hover {
     background-size: 200%;
     font-size: 1.2rem;
     color: #fff;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     text-transform: uppercase;
     margin: 1rem 0;
     cursor: pointer;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .btn:hover {
@@ -206,7 +206,7 @@ a:hover {
 hr {
     border: 0;
     height: 1px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    background-image: linear-gradient( to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 
 @media screen and (max-width: 1400px) {
